app/css/dashboard.css
/*
 * Base structure
 */

/* Move down content because we have a fixed navbar that is 50px tall */
.top-padding {
  padding-top: 50px;
}

.draw-number {
  font-size:50px;
  text-decoration: underline;
  text-align: center
}

.floor {
  text-align:left;
  position:fixed;
  bottom:0px;
  width:100%;
  padding-bottom:10px;
  color: #BCB9B9;
}
button{
  padding-top:10px;
}

.adsbygoogle{
  position:fixed;
  bottom:0;
  max-height:150px;
  min-height: 100px;
  width: 100%;
}

@media  (max-width: 700px) {  
  .adsbygoogle{
    position: initial;
    padding-top:10px;
  }

  .draw-number{
    font-size:2.5em;
  }

  input {
        margin-bottom: 5px;
  }

  .toast-top-right{
    padding-top: 50px;
  }
}
.ng-invalid {
/*      border-color: #a94442;
    -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
    box-shadow: inset 0 1px 1px rgba(0,0,0,.075);*/
}
/*
 * Global add-ons
 */

.sub-header {
  padding-bottom: 10px;
  border-bottom: 1px solid #eee;
}

/*
 * Top navigation
 * Hide default border to remove 1px line.
 */
.navbar-fixed-top {
  border: 0;
  box-shadow: 0px 4px 7px #888888;
}

/*
 * Sidebar
 */

/* Hide for mobile, show later */
.sidebar {
  display: none;
  box-shadow: 0px 2px 7px #CBC3C3;
}
@media (min-width: 768px) {
  .sidebar {
    position: fixed;
    top: 51px;
    bottom: 0;
    left: 0;
    z-index: 1000;
    display: block;
    padding: 20px;
    background-color: #f5f5f5;
    border-right: 1px solid #eee;
  }
}

/* Sidebar navigation */
.nav-sidebar {
  margin-right: -21px; /* 20px padding + 1px border */
  margin-bottom: 20px;
  margin-left: -20px;
}
.nav-sidebar > li > a {
  padding-right: 20px;
  padding-left: 20px;
}
.nav-sidebar > .active > a,
.nav-sidebar > .active > a:hover,
.nav-sidebar > .active > a:focus {
  color: #fff;
  background-color: #428bca;
}


/*
 * Main content
 */

.main {
  padding: 20px;
}
@media (max-width: 768px) {
  .market-field{
    margin-top: .2em
  }

  button.btn-cost {
    border-top-left-radius: 4px;
    border-top-right-radius: 4px;
    border-bottom-left-radius: 0px;
    border-bottom-right-radius: 0px;
  }
}
@media (min-width: 768px) {
  .main {
    padding-right: 40px;
    padding-left: 40px;
  }

}
.main .page-header {
  margin-top: 0;
}


/*
 * Placeholder dashboard ideas
 */

.placeholders {
  margin-bottom: 30px;
  text-align: center;
}
.placeholders h4 {
  margin-bottom: 0;
}
.placeholder {
  margin-bottom: 20px;
}
.placeholder img {
  display: inline-block;
  border-radius: 50%;
}
.navbar .nav {
    padding-right: 10px;
}

.field {
  color: #5F5F5F;
}

.progress {
  margin: 0px;
  border: 1px solid  #ccc;
  background-color: #FDFDFD;
  border-top: 0;
  border-top-left-radius: 0;
  border-top-right-radius: 0; 
}
.progress-bar{
  transition: width .1s ease;
}
.img-thumbnail{
  border-bottom-right-radius: 0px;
  border-bottom-left-radius: 0px;
}
.btn-cost {
  border-top-left-radius: 0px;
  border-top-right-radius: 0px;
}

.bottom{
  position: absolute;
  bottom:0;
  right:0;
}

.row .tight{
  padding-top: 0;
}

.row .mellow{
  padding-top: 10px;
  padding-bottom: 10px;
  margin: 3px;

}
h1{
  text-shadow: 1px 1px rgba(171, 171, 171, 0.36);
}

.well-sm{
  box-shadow: 1px 1px 2px #A1A1A1;
}

.sugar {
  font-size: 24px;
  float:left;
}

.active {
  box-shadow: 1px 1px 3px #428bca;
}
.upgrade-title{
  margin-top: 5px;
  margin-bottom: 5px;
  font-size:18px;
}

.achievement-thumb{
  background-color: #959595;
  }

.achieved{
  box-shadow: 2px 3px 4px #888888;
}

.base {
  position: relative;
}

